--- a/auto-messages/popup.html
+++ b/auto-messages/popup.html
@@ -6,14 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto messages</title>
+
+    <link rel="stylesheet" href="popup.css">
 </head>
 
 <body>
-    <div class="contaienr">
+    <div class="container">
         <h2>Auto Messages</h2>
         <ul class="messages">
-            <li><button id="ola">Olá</button></li>
-            <li></li>
+            <li><button id="ola">Say hello</button></li>
+            <li><button id="auto-like">Auto Like All</button></li>
             <li></li>
         </ul>
     </div>
